--- a/Ousmane.css
+++ b/Ousmane.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: rgb(9, 10, 12);
+    background-color: rgb(22, 24, 29);
     min-height: 100vh;
     font-family: 'Segoe UI', sans-serif;
     color: rgb(255, 255, 255);
@@ -62,6 +62,11 @@ section {
 .learn{
     padding-top: 200px;
     margin-bottom: 70px
+    text-align right;
+}
+
+.learn h1{
+    text-align: right;
 }
 
 
@@ -123,6 +128,13 @@ section {
 .projet-card p {
     font-size: 1rem;
     color: rgba(255, 255, 255, 0.7);
+}
+
+.certification {
+    text-align: center;
+    padding-top: 170px;
+    margin: 30px auto;
+    width: 80%;
 }
 
 h1 {
